# climate-risk-api

./: .env.example  .gitignore  CLAUDE.md  CODE_ANTIGO_REFERENCIA.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  analise-inicial.md  desenho-api.md  diagnostico-consolidado.md  divida-tecnica.md  operacoes.md  plano-refatoracao.md
docs/adrs/: 0001-consolidacao-nucleo.md  0002-fastapi-sqlalchemy.md  0003-persistencia-sqlite.md  0004-fila-jobs-sqlite.md  0005-camadas-explicitas.md  0006-execucao-nativa.md  0007-deteccao-unidade.md  0009-indices-estresse-hidrico.md  0010-leitura-lazy-netcdf.md  0011-intensidade-media-por-dia.md  0012-interface-unica-estudo.md  0013-streaming-pipeline-estresse-hidrico.md  0014-interseccao-cobertura-municipal.md  0015-iterador-com-filtro-municipios.md  0016-materializacao-unica-iterator.md
docs/perf/: slice-23-investigation.md
estudo/: app.js  estilos.css  index.html
frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: gen-types.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  schema.d.ts
frontend/src/components/: Alert.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.tsx  CodeBlock.tsx  EmptyState.tsx  ErrorState.tsx  Input.tsx  Modal.tsx  Select.tsx  Spinner.tsx  Table.tsx  Textarea.tsx
frontend/src/hooks/: useAdmin.ts  useCalculos.ts  useCobertura.ts  useEstresseHidrico.ts  useExecucoes.ts  useFornecedores.ts  useGeocoding.ts  useJobs.ts  useResultados.ts
frontend/src/lib/: csv.test.ts  csv.ts  format.ts
frontend/src/pages/: Admin.tsx  CalculosPontos.tsx  Cobertura.tsx  Dashboard.tsx  ExecucaoDetalhe.tsx  ExecucoesList.tsx  ExecucoesNova.tsx  Fornecedores.tsx  Geocodificacao.tsx  (+4 more)
legacy/: code_doc.docx  cordex_pr_freq_intensity.py  gera_base_fornecedores.py  gera_pontos_fornecedores.py  locais_faltantes_fornecedores.ipynb
migrations/: env.py
migrations/versions/: 20260416_0001_inicial_schema_version.py  20260416_0001_initial_schema.py  20260419_0003_slice_10_fornecedor_cidade_uf_atualizado_em.py  20260424_0004_slice_15_resultado_estresse_hidrico.py  20260427_0005_slice_19_intensidade_mm_dia.py  69aa6a0f411b_slice_8_municipio_atualizado_em_lat_lon_.py
scripts/: bench_iterar_municipios.py  gerar_baseline_sintetica.py  gerar_shapefile_fixture.py
tests/: conftest.py
tests/integration/: test_baseline_presente.py  test_paridade_legacy.py  test_pipeline_streaming.py
tests/perf/: profile_materializado.txt  profile_slice_21.txt  profile_slice_22.txt  profile_slice_23.txt
(+260 files in other folders)
