[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climate-risk-api"
version = "0.0.1"
description = "API para cálculo de índices climáticos sobre dados CORDEX."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Climate Risk API" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "xarray>=2024.6",
    "netcdf4>=1.7",
    "python-ulid>=3.0",
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

[project.scripts]
climate-risk-api = "climate_risk.cli.api:main"
climate-risk-worker = "climate_risk.cli.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/climate_risk"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["legacy", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# N818: exception names em português usam prefixo "Erro" (convenção do projeto).
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N806"]
"scripts/**/*.py" = ["N802", "N806", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["climate_risk.domain.*", "climate_risk.application.*"]
strict = true

[[tool.mypy.overrides]]
module = ["climate_risk.infrastructure.*", "climate_risk.interfaces.*"]
strict = false
check_untyped_defs = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=src/climate_risk",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/climate_risk"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
